# medchem-molecule-filter

./: .buildinfo  .gitignore  .pylintrc  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  README.md.backup  SETUP_GUIDE.md  VERIFICATION_CHECKLIST.md  api.html  filter_rules.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-format.yml  code-quality.yml  docs.yml  publish.yml  tests.yml
_modules/: index.html
_modules/medchem_filter/: filters.html  properties.html
_sources/: filter_rules.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt
docs/: README_IMAGES.md  api.rst  conf.py  filter_rules.rst  generate_pattern_images.py  verify_images.py
examples/: basic_usage.py  comprehensive_filter_demo.py  pandas_integration.py  quick_reference.py
medchem_filter/: __init__.py  filters.py  pandas_utils.py  properties.py
medchem_filter/data/: heterocycle_patterns.py  pains_patterns.py  reactive_patterns.py
tests/: test_filters.py  test_integration.py  test_pandas_utils.py  test_properties.py
